--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /* css reset */
 * {
-    margin: 0;
+    margin:  0;
     padding: 0;
     outline: 0;
     box-sizing: border-box;
+    color: rgba(32, 3, 3, 0.754);
   }
   
   body {
@@ -11,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #ba7274;
   }
   
   /* designing the counter container */
@@ -20,8 +22,8 @@
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    box-shadow: 0 0 5px black;
-    padding: 20px;
+    box-shadow: 0 0 5px rgb(146, 7, 7);
+    padding: 24px;
     border-radius: 5px;
   }
   
@@ -32,8 +34,9 @@
     font-weight: bold;
   }
   
-  #displayValue {
+   #displayValue {
     font-size: 25px;
     padding: 5px 15px;
-    border: 1px solid black;
+    border: 5px solid rgb(148, 16, 16), 0, 0;
+    color: rgb(195, 226, 236);
   }
